Update test/jdk/java/lang/invoke/VarHandles/IndirectVarHandleTest.java
Co-authored-by: Mandy Chung <mandy.chung@oracle.com>